core/testing/snapshots/functions/parse_json.snap
### TITLE ###
Int
### INPUT ###
a = parse_json("2")
print(a + 1)
### STDOUT ###
3

### TITLE ###
Float
### INPUT ###
a = parse_json("2.1")
print(a + 1)
### STDOUT ###
3.1

### TITLE ###
Bool
### INPUT ###
a = parse_json("true")
print(a or false)
### STDOUT ###
true

### TITLE ###
String
### INPUT ###
a = parse_json('"alice"')
print(a + "e")
### STDOUT ###
alicee

### TITLE ###
Map
### INPUT ###
a = parse_json(r'{"name": "alice", "age": 20, "height": 5.5, "is_student": true, "cars": ["audi", "bmw"], "friends": {"bob": 1, "charlie": 2}}')
print(a["name"] + "e")
print(a["age"] + 1)
print(a["height"] + 1.1)
print(a["is_student"] or false)
print(a["cars"][0] + "e")
print(a["friends"]["bob"] + 1)
### STDOUT ###
alicee
21
6.6
true
audie
2

### TITLE ###
Errors on invalid JSON
### INPUT ###
parse_json(r'{asd asd}')
### STDERR ###
error[RAD20011]: Error parsing JSON: invalid character 'a' looking for beginning of object key string
  --> <script>:1:1
  |
1 | parse_json(r'{asd asd}')
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
   = info: rad explain RAD20011


### EXIT ###
1
### TITLE ###
Errors on invalid type
### INPUT ###
parse_json(10)
### STDERR ###
error[RAD30001]: Value '10' (int) is not compatible with expected type 'str'
  --> <script>:1:12
  |
1 | parse_json(10)
  |            ^^
  |
   = info: rad explain RAD30001


### EXIT ###
1
### TITLE ###
Errors on no args
### INPUT ###
parse_json()
### STDERR ###
error[RAD30007]: Missing required argument '_str'
  --> <script>:1:1
  |
1 | parse_json()
  | ^^^^^^^^^^^^
  |
   = info: rad explain RAD30007


### EXIT ###
1
### TITLE ###
Errors on too many args
### INPUT ###
parse_json("1", "2")
### STDERR ###
error[RAD30007]: Expected at most 1 args, but was invoked with 2
  --> <script>:1:1
  |
1 | parse_json("1", "2")
  | ^^^^^^^^^^^^^^^^^^^^
  |
   = info: rad explain RAD30007


### EXIT ###
1
### TITLE ###
Empty list
### INPUT ###
blop = r'{ "foo": [] }'
blop.parse_json().print()
### STDOUT ###
{ "foo": [ ] }

